# bold-growth-project

./: .gitignore  AGENTS.md  README.md  data.xlsx  process.md  pyproject.toml  thoughts.md
agent/: __init__.py  _prompts.py  artifacts.py  config.py  generator.py  guardrails.py  llm.py  prioritize.py  reviewer.py  run.py  scrape.py  state.py
agent/prompts/: generator.md  reviewer.md
design/: part-2-system-a.md  part-2-system-b.md  part-3-fake-wins.md
human/design/: part-2-system-a.md  part-2-system-b.md  part-3-fake-wins.md
human/research/: process.md
human/sample-output/week-1-2026-05-16/: cta_performance_after_week1_simulation.json
human/sample-output/week-2-2026-05-23/: cta_state_after_week2.json
mocks/: cta_performance.json  frozen_list.json  seed_blogs.json  seed_catalog.json  site_baseline.json
sample_output/: README.md  cta_state_after_week2.json
sample_output/week-1-2026-05-16/: diff.json  plan.md
sample_output/week-2-2026-05-23/: diff.json  plan.md
tests/: test_guardrails.py  test_prioritize.py  test_prompts.py  test_run_clock.py  test_state.py
