[project]
name = "bold-growth-agent"
version = "0.1.0"
description = "Blog -> SGP routing agent: weekly loop that picks a relevant scholarship page and tailored CTA for each blog post on bold.org."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
bold-agent = "agent.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.setuptools.package-data]
agent = ["prompts/*.md"]
